Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ html {
     background-size: cover;
     background-position: center;
     margin: 0px;
+    overflow: auto;
 }
 
 header h1 {
@@ -104,6 +105,7 @@ header h2 {
          #EAD2AC 50%,
          #EAD2AC 100%
         );
+        overflow: auto;
 }
 
  #about .full-width {
@@ -143,6 +145,7 @@ header h2 {
    				  1px 1px 0 #000,
    				 1px -1px 0 #000;
    				-1px -1px 0 #000;
+        overflow: auto;
        }
 
 
@@ -151,6 +154,7 @@ header h2 {
  #video {
       background-color: #334147;
       text-align: center;
+      overflow: auto;
       }
 
 #video .full-width {
@@ -190,6 +194,7 @@ header h2 {
 #contact {
         background-color: #A3A3A3;
         font-family: 'Share', cursive;
+        overflow: auto;
       }
 
 #contact .full-width {
